force reset audio + name RNG